Fix box misalignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,6 @@ body {
 .wrapper-box {
   padding: 8px;
   border: 1px solid #bbb;
-  max-width: 392px;
   background-color: #fff;
 }
 
